samples/_failures_safe/1761071667_8f3740_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14e47f52.c: In function ‘main’:
./samples/SAFE/__tmp_14e47f52.c:134:5: error: expected expression at end of input
  134 |     init_log_analyzer(&
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_14e47f52.c:134:5: error: expected declaration or statement at end of input
